<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/tituloDialogUr"
            android:layout_marginBottom="8dp"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnOption1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDialog1"/>

            <Button
                android:id="@+id/btnOption2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDialog2"/>

            <Button
                android:id="@+id/btnOption3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDialog3"/>
            <Button
                android:id="@+id/btnOption4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDialog4"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>