<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".express.ContratoExpress">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/contrato"
        android:textSize="30sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/fondo_contrato"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space3">

        <TextView
            android:id="@+id/textViewIntentoContrato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:gravity="end"
            android:text="@string/intento"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewFolioContrato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/folio"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textViewHoraContrato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/horaContrato"
                android:textColor="@color/black"
                android:textSize="17sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />


        <TextView
            android:id="@+id/textViewLugarFechaContrato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            android:text="@string/lugarFecha"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/textViewCuerpoContrato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:singleLine="false"
            android:text="@string/cupertoContrato"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/textViewFormaPagoContrato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            android:text="@string/formaPago"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textViewAtteContrato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/atteContrato"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <Space
        android:id="@+id/space3"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />


    <TextView
        android:id="@+id/prueba_txt_contrato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="37dp"
        android:background="@color/fondo1"
        android:gravity="end"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:text="@string/pruebaSinRegistro"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/prueba_txt_contrato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_descargsr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/fondo_boton"
            android:text="@string/descargar"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            app:backgroundTint="@color/colorBoton"
            app:icon="@drawable/ic_vector"
            app:iconTint="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/fondo_boton"
            android:text="@string/home"
            android:textColor="@color/black"
            app:backgroundTint="@color/colorBoton"
            app:icon="@drawable/ic_home"
            app:iconTint="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>