<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/fondo_emergente"
    android:padding="15dp"
    android:layout_gravity="center">


    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/descargar" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/descargar_necesita_cuenta" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/colorBoton"
            android:text="@string/cancelar"
            android:textColor="@color/black"
            tools:ignore="ButtonStyle" />

        <Space
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/colorBoton"
            android:textColor="@color/black"
            android:text="@string/aceptar" />

    </LinearLayout>


</LinearLayout>