<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contrato">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/contrato"
        android:textSize="30sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo_contrato"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space3">



        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewFolioContrato"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:textSize="17sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/folio" />

            <TextView
                android:id="@+id/textViewHoraContrato"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_marginEnd="20dp"
                android:textSize="17sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/horaContrato" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/textViewLugarFechaContrato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:gravity="end"
            android:layout_gravity="end"
            android:text="@string/lugarFecha" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/textViewCuerpoContrato"
            android:layout_width="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/cupertoContrato" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/textViewFormaPagoContrato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="end"
            android:text="@string/formaPago" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textViewAtteContrato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/atteContrato" />

    </LinearLayout>

    <Space
        android:id="@+id/space3"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo_boton"
        android:layout_margin="20dp"
        android:text="@string/descargar"
        android:textColor="@color/black"
        app:backgroundTint="@color/colorBoton"
        app:icon="@drawable/ic_vector"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>