<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/fondo_emergente"
    android:padding="15dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/contrasenia" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/contrania_modificada" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="iniciarSesion"
        android:backgroundTint="@color/colorBoton"
        android:text="@string/iniciarSesion"
        android:textColor="@color/black" />

</LinearLayout>