<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/fondo_emergente"
    android:padding="15dp"
    android:layout_gravity="center">


    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/bienvenida_kerkly" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/cuenta_creada" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo_boton"
        android:minHeight="48dp"
        android:onClick="iniciarSesion"
        android:text="@string/iniciarSesion"
        android:textColor="@color/black"
        app:backgroundTint="@color/colorBoton" />

</LinearLayout>